MRC-2323 back button mobile view, maybe back button iPad issue

--- a/Navigation/sidebar.scss
+++ b/Navigation/sidebar.scss
@@ -22,7 +22,8 @@
 }
 
 .back-action {
-  position:sticky;
+  position: fixed;
+  bottom: 10px;
 }
 .mrc-language select {
   text-transform: capitalize;
